corerecion de viewset, permisos, cracion usuariocliente, listar reposrte, comprar

--- a/frontend/src/js/common/components/Catalogo/style.css
+++ b/frontend/src/js/common/components/Catalogo/style.css
@@ -1,4 +1,4 @@
-.blue-gradient-bg{
+.blue-gradient-bg2{
     min-height: 100vh;
     background: #ffc400e5;
     background: linear-gradient(to right, #5ce600e3, #3ac1ff);
